# blockchain_society

./: Cargo.toml
.github/workflows/: checks.yml
blockchain/: metadata.scale
blockchain/node/: Cargo.toml
blockchain/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
blockchain/runtime/: Cargo.toml
blockchain/runtime/src/: lib.rs
discord-bot/: .env.example  Cargo.toml
discord-bot/src/: error.rs  event_handler.rs  main.rs  primitives.rs  util.rs
discord-bot/src/commands/: general.rs
pallet-discord/: Cargo.toml
pallet-discord/src/: lib.rs  primitives.rs
subxt/: Cargo.toml
subxt/src/: error.rs  rpc.rs
