[package]
name = "bs_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0.1"
dotenv = "0.15.0"
reqwest = "0.11.8"
env_logger = "0.9.0"
serde_json = "*"
serde = "*"

[dependencies.serenity]
version = "0.10.9"
default-features = false
features = ["client", "cache", "framework", "standard_framework", "gateway", "rustls_backend", "model", "unstable_discord_api"]

[dependencies.tokio]
version = "1.15.0"
features = ["macros", "rt-multi-thread"]

[dependencies.subxt]
#git = "https://github.com/paritytech/subxt"
path = "../subxt"

[dependencies.sp-keyring]
package = "sp-keyring"
git = "https://github.com/paritytech/substrate/"
branch = "master"

[dependencies.codec]
package = "parity-scale-codec"
version = "2"
default-features = false
features = ["derive", "full", "bit-vec"]
